# thesis-source

./: .clang-format  .gitlab-ci.yml  .gitlab-ci.yml   CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
cmake/: Findfuse.cmake
include/: CustomVFS.h  config.h  custom_vfs.h  decorators.h  directory.h  encryption_decorator.h  encryption_vfs.h  encryptor.h  file.h  file_system.h  fuse_wrapper.h  logging.h  module_base.h  node.h  nodes.h  versioning_vfs.h  vfs_decorator.h  vfs_node.h
include/common/: config.h  logging.h  path.h  prefix_parser.h
include/hook-generation/: encryption.h  versioning.h
libs/: CMakeLists.txt
libs/fusexx/: CMakeLists.txt  README.md  example.cpp
libs/fusexx-main/: CMakeLists.txt
libs/fusexx/include/: fuse_wrapper.h
libs/fusexx/src/: fuse_wrapper.cpp
src/: CustomVFS.cpp  config.cpp  custom_vfs.cpp  encryption_decorator.cpp  encryption_vfs.cpp  encryptor.cpp  encryptor_mac.cpp  fuse_wrapper.cpp  main.cpp  versioning_vfs.cpp  vfs_decorator.cpp
src/common/: logging.cpp  path.cpp  prefix_parser.cpp
tests/: CMakeLists.txt  basic_tests.cpp  basic_vfs_tests.cpp  common.h  complex_tests.cpp  encryption_tests.cpp  encryption_vfs_tests.cpp  path_tests.cpp  test_config.h  test_main.cpp  tests_encryption_vfs.cpp  tests_encryptor.cpp  tests_path.cpp  tests_prefix.cpp  tests_versioning.cpp  versioning_tests.cpp  versioning_vfs_tests.cpp
tools/: CMakeLists.txt  encryption_tool.cpp  versioning_tool.cpp
tools/encryption/: main.cpp
tools/versioning/: main.cpp
